--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=server
 
 spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Ritesh7488
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA and Hibernate Configuration
@@ -16,3 +16,15 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.root=ERROR
 logging.level.org.springframework.data.jpa.repository.query=DEBUG
+
+
+# Spring Session
+spring.session.store-type=jdbc
+
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
