Backend Spring Security and Authentification update

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,13 +18,19 @@ logging.level.root=ERROR
 logging.level.org.springframework.data.jpa.repository.query=DEBUG
 
 
+#jwt.secret=U^d6MvP7XsThQzA2CmY*oKfL9G!eJ$#Y
+#jwt.expirationMs=86400000
+
+
+
 # Spring Session
 spring.session.store-type=jdbc
 
-# Mail Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-email-password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+## Mail Configuration
+
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=your-email@gmail.com
+# spring.mail.password=your-email-password
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
