--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.web=DEBUG
 # MySQL database configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/todorails?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Ritesh7488
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA and Hibernate configurations
