--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.17",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
+    "react-chartjs-2": "^5.3.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
   },
