--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "animate.css": "^4.1.1",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "react-chartjs-2": "^5.3.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
   },
