--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "@tailwindcss/vite": "^4.0.17",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.6",
     "chart.js": "^4.4.8",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "react-chartjs-2": "^5.3.0",
