--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,13 @@
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.487.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confirm-alert": "^3.0.6",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
-    "recharts": "^2.15.3"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
