--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.16.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.487.0",
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.22.0"
   },
