--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "chart.js": "^4.4.8",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.16.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.513.0",
     "react-chartjs-2": "^5.3.0",
