--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,12 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-window": "^1.8.11",
     "recharts": "^2.15.3",
-    "sweetalert2": "^11.22.0"
+    "sweetalert2": "^11.22.0",
+    "three": "^0.177.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
