--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.8",
+    "firebase": "^11.9.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^12.16.0",
     "jspdf": "^3.0.1",
