--- a/server/pom.xml
+++ b/server/pom.xml
@@ -131,6 +131,16 @@
 			<version>2.0.4</version>
 		</dependency>
 
+		<!-- HttpClient -->
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -163,3 +173,4 @@
 	</build>
 
 </project>
+
